oprava testu jeVSeznamu, camelCase, podmínky, zjednoduseni testu